--- a/pages/card-database.html
+++ b/pages/card-database.html
@@ -24,6 +24,16 @@
                 <span class="divider"></span>
                 <span class="total">32</span>
             </button>
+            <button class="filter-button idle">
+                <span class="title">Mataram</span>
+                <span class="divider"></span>
+                <span class="total">32</span>
+            </button>
+            <button class="filter-button idle">
+                <span class="title">Javacentric</span>
+                <span class="divider"></span>
+                <span class="total">32</span>
+            </button>
         </div>
 
         <!-- Grid of Cards -->
