--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
                     <img class="nav-icon active" src="./assets/nav-money-active.svg" alt="Shops Icon Active" style="display:none;">
                     <span class="nav-text idle">Shops</span>
                 </a></li>
+                <li><a href="#" class="nav-item" data-page="shops">
+                    <img class="nav-icon idle" src="./assets/nav-money-idle.svg" alt="Shops Icon Idle">
+                    <img class="nav-icon active" src="./assets/nav-money-active.svg" alt="Shops Icon Active" style="display:none;">
+                    <span class="nav-text idle">Shops</span>
+                </a></li>
                 <!-- Other nav items -->
             </ul>
         </nav>
@@ -38,8 +43,12 @@
                 <button class="hamburger" id="hamburger">&#9776;</button>
                 <h1 id="page-title">Card Database</h1> <!-- This title will change dynamically -->
                 <div class="header-icons">
-                    <button class="icon-btn">🔖</button>
-                    <button class="icon-btn">🔍</button>
+                    <button class="icon-btn">
+                        <img src="./assets/ic-action-bookmark.svg" alt="Bookmark Icon">
+                    </button>
+                    <button class="icon-btn">
+                        <img src="./assets/ic-action-search.svg" alt="Search Icon">
+                    </button>
                 </div>
             </header>
 
