--- a/pages/card-database.html
+++ b/pages/card-database.html
@@ -25,12 +25,7 @@
                 <span class="total">32</span>
             </button>
             <button class="filter-button idle">
-                <span class="title">Mataram</span>
-                <span class="divider"></span>
-                <span class="total">32</span>
-            </button>
-            <button class="filter-button idle">
-                <span class="title">Javacentric</span>
+                <span class="title">New Asgard</span>
                 <span class="divider"></span>
                 <span class="total">32</span>
             </button>
