--- a/card-detail.html
+++ b/card-detail.html
@@ -40,7 +40,7 @@
         <!-- Series Section -->
         <div class="series-section">
             <div class="series-icon">
-                <img src="../assets/series-icon.png" alt="Series Icon">
+                <img src="../assets/series-icon.png" alt="Series Icon" id="icon-series">
             </div>
             <div class="series-details">
                 <span id="series-name"></span>
