--- a/index.html
+++ b/index.html
@@ -43,7 +43,14 @@
         <main class="content" id="content-area">
             <!-- Header Section -->
             <header class="header">
-                <button class="hamburger" id="hamburger">&#9776;</button>
+                <!-- 
+                <button class="icon-btn" id="hamburger">
+                    <img src="./assets/ic-action-hamburger.svg" alt="Bookmark Icon">
+                </button>
+                -->
+                <button class="hamburger" id="hamburger">
+                    <img src="./assets/ic-action-hamburger.svg" alt="Hamburger Icon">
+                </button>
                 <h1 id="page-title">Card Database</h1> <!-- This title will change dynamically -->
                 <div class="header-icons">
                     <button class="icon-btn">
